[package]
name = "walox-test-util"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
test = false

[dependencies]
filecheck = "0.5.0"
threadpool = "1.8.1"
ansi_term = "0.12.1"
backtrace = "0.3.65"
anyhow = "1.0.57"
num_cpus = "1.13.1"
cargo_metadata = "0.14.2"
globwalk = "0.8.1"
regex = "1.5.6"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
