[package]
name = "walox-test-util"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
test = false

[dependencies]
filecheck = "0.5.0"
threadpool = "1.8.1"
ansi_term = "0.12.1"
backtrace = "0.3.67"
anyhow = "1.0.68"
num_cpus = "1.15.0"
cargo_metadata = "0.15.2"
globwalk = "0.8.1"
regex = "1.7.1"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
